feat(account-service): adjust REST API, complete service (add application and infrastructure layers)
