# doc/openapi.yaml
@@ -16,14 +16,16 @@ tags:
     description: Ongoing delivery
   - name: user-session
     description: Logged in user session
-    
+
+# TODO userName not unique
+
 paths:
 
   /accounts:
     post:
       tags:
         - account
-      description: Create a new acccount
+      description: Create a new account
       operationId: createNewAccount
       parameters:
         - name: userName
@@ -40,7 +42,7 @@ paths:
             type: string
       responses:
         '200':
-          description: account succesfully created
+          description: account successfully created
           content:
             application/json:       
               schema:
@@ -60,7 +62,7 @@ paths:
      get:
       tags:
         - account
-      description: Create a new acccount
+      description: Get account info
       operationId: getAccountInfo
       parameters:
         - name: accountId
@@ -90,12 +92,6 @@ paths:
           required: true
           schema:
             type: string
-        - name: userName
-          in: query
-          description: user name
-          required: true
-          schema:
-            type: string
         - name: password
           in: query
           description: user password
@@ -104,7 +100,7 @@ paths:
             type: string
       responses:
         '200':
-          description: user succesfully logged in
+          description: user successfully logged in
           content:
             application/json:       
               schema:
@@ -195,7 +191,7 @@ paths:
             # type: string
       responses:
         '200':
-          description: delivery succesfully created
+          description: delivery successfully created
           content:
             application/json:       
               schema:
@@ -232,7 +228,7 @@ paths:
             type: string
       responses:
         '200':
-          description: delivery succesfully tracked
+          description: delivery successfully tracked
           content:
             application/json:       
               schema:
@@ -252,7 +248,7 @@ components:
       properties:
         userName:
           type: string
-          description: user name, univocally defined
+          description: user name, uniquely defined
         password:
           type: string
           description: password of the user
